Fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ html, body {
     margin: 0;
     font-family: Raleway, Avenir Next;
     height: 100%;    
+    /* overflow: scroll; */
 }
 
 * {
@@ -34,7 +35,7 @@ img {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    position: absolute;
+    /* position: absolute; */
 }
 
 #header a {
@@ -52,7 +53,7 @@ img {
 
 #content {
     width: 100%;
-    height: 100%;
+    height: 75%;
     background-color: #FBFEFD;
     display: flex;
     flex-direction: row;
@@ -65,7 +66,7 @@ img {
 }
 
 #content #text #main {
-    font-size: 45px;
+    font-size: 40px;
     font-weight: 900;
     color: #5FB890;
     padding: 25px 0;
@@ -95,6 +96,16 @@ img {
 
 #content #img {
     background-color: red;
-    height: 40%;
+    height: 50%;
     margin: auto 0;
+}
+
+@media (max-width: 800px) {
+    #content #text {
+        padding: 0 20px;
+    }
+
+    #img {
+        display: none;
+    }
 }
